# waterline

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: loop.yml  pr.yml  site.yml
actuals/claims/: 2026-07-04.json
calibration/: claims.json
data/bls/: levels_2018_2026_9a413af68b43ba43.json
data/fred/: ICSA.csv
docs/: backtest-claims.json  backtest-claims.md  backtest-cpi.json  backtest-cpi.md  verify-cpi.md
forecasts/claims/: 2026-07-04.json
forecasts/cpi/: 2026-06.json
models/claims/: derivation.md  resolution.md
models/cpi/: derivation.md  resolution.md  schedule.yaml  tree.yaml
models/fermi/golf-balls-747/: derivation.md  tree.yaml
models/fermi/subway-franchise-profit/: derivation.md  tree.yaml
models/fermi/us-jeans-revenue/: derivation.md  tree.yaml
readouts/: claims-2026-07-04.md
registry/: assumptions.yaml
scripts/: author_cpi.py  backtest_claims.py  backtest_cpi.py  build_site.py  loop.py  pr_delta.py
src/waterline/: __init__.py  claims_author.py  cli.py  cpi_author.py  delta.py  distributions.py  engine.py  loop.py  model.py  transforms.py
src/waterline/ingest/: bls.py  fred.py
tests/: test_claims_author.py  test_cpi_author.py  test_delta.py  test_distributions.py  test_engine.py  test_loop.py  test_model.py  test_yaml_roundtrip.py
tests/fixtures/toy_cpi/: registry.yaml  tree.yaml
