[project]
name = "waterline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anup", email = "anupmm@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "pytest>=9.1.1",
]
